24.01.2010
      * Added: Midi sync: Added 'Jack timebase master' checkbox, removed requirement of MusE being tempo map master. (T356)
      * Added: While on external sync and Jack timebase master, reports correct MusE BBT info to Jack. (Tempo not correct yet). (T356)
23.01.2010
      * Fixed: External midi sync in: MusE transport not rewinding upon reception of start. (T356)
      * Added: Midi sync: MusE now transmits and receives some MMC commands, and displays some MTC and SMTPE info. (T356)
        - No transmit MTC or receive MTC syncing yet, just transport control stuff.
        - Tested OK with Rosegarden and Ardour, but they do not seem to have an option to sync to the input midi clock, 
           only MTC or internally. Must test when MTC output added to MusE. 
      * Improved: Midi sync editor window: Shows MMC and MTC activity and works with them now. (T356)
21.01.2010
      * Fixed: First tests: External midi sync in works now! Should be rock solid no matter what is thrown at it. (T356)
        - All changes are labeled "p3.3.25"
        - Switched to a 'direct drive' method instead of 'calculation of tempo' method.
          Drift between source of master and slave is non-existant since the incoming midi clocks 
           drive the midi engine directly. This is at the expense of exact 64th note resolution.
          At MusE's fixed 24 midi clocks per quarternote, triplet 32nd notes are resolved (32nd note divided by three).
          MusE's default 'division' (ticks per quarternote) is 384. 384/24 gives a division of 16 MusE 'ticks' per midi clock.
        - Normally when using the tempo map (external sync is off), device play event times are in frames,
           because the tempo map provides for that kind of sub-tick frame resolution.
          But now, during external sync, device play event times are in ticks, not frames. 
          Hence the compromise between exactness of note times, and master/slave drift.