@@ -88,6 +88,7 @@ GlobalConfigValues config = {
       1,                            // smf export file format
       false,                        // midi export file 2 byte timesigs instead of 4
       true,                         // optimize midi export file note offs
+      true,                         // Split imported tracks into multiple parts.
       1,                            // startMode
       QString(""),                  // start song path
       384,                          // gui division
