@@ -94,7 +94,7 @@ void initShortCuts()
       defShrt(SHRT_CONFIG_SHORTCUTS,      0, "Settings: Configure shortcuts", ARRANG_SHRT, "configure_shortcuts");
       defShrt(SHRT_CONFIG_METRONOME,      0, "Settings: Configure metronome", ARRANG_SHRT, "configure_metronome");
       defShrt(SHRT_CONFIG_MIDISYNC,       0, "Settings: Midi sync configuration", ARRANG_SHRT, "configure_midi_sync");
-      defShrt(SHRT_MIDI_FILE_CONFIG,      0, "Settings: Midi file export configuration", ARRANG_SHRT, "configure_midi_file");
+      defShrt(SHRT_MIDI_FILE_CONFIG,      0, "Settings: Midi file import/export configuration", ARRANG_SHRT, "configure_midi_file");
       defShrt(SHRT_APPEARANCE_SETTINGS,   0, "Settings: Appearance settings", ARRANG_SHRT, "configure_appearance_settings");
       defShrt(SHRT_CONFIG_MIDI_PORTS,     0, "Settings: Midi ports / Soft Synth", ARRANG_SHRT, "configure_midi_ports");
       defShrt(SHRT_CONFIG_AUDIO_PORTS,    0, "Settings: Audio subsystem configuration", ARRANG_SHRT, "configure_audio_ports");
